# family-atlas

./: .env.example  .gitignore  README.md  ma.py  main.py  pyproject.toml  test_summary.py
_local/telegram/: collector.py
_local_test_/: bm25.py  embeddings.py  tt.py
src/: config.py  logger.py  utils.py
src/agents/: graph.py  model.py  nodes.py  obsidian_agent.py  run_agent.py  schemas.py  summary_agent.py  summary_graph.py  text.py  vision.py  writer.py
src/dashboard/: app.py  queries.py  views.py
src/dashboard/templates/: base.html  diagnostics.html  index.html  merge.html  stats.html
src/database/: engine.py  models.py  utils.py
src/helpers/: download_models.py  find_relatives.py  get_forum_threads.py  person_merge.py  person_resolver.py
src/infrastructure/: context.py  embeddings.py  llm_server.py  sst_models.py
src/integrations/: google_calendar.py
src/msg_assembler/: assembler.py  docs_saver.py  image_describer.py  schemas.py  voice_recognition.py
src/msg_collector/: telethon_collector.py  telethon_sender.py
src/msg_processor/: collect_msg.py  telegram_file.py  voice_recognition.py
src/prompts/: assembler_prompts.py  audio_normalizer.py  main.py  summary_prompt.py  texts.py  vision.py
src/scripts/: download_models.py
src/telegram/: collector.py  process_telegram_message.py  save_msgs.py
