[project]
name = "familybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.8",
    "loguru>=0.7.3",
    "onnx-asr>=0.11.0",
    "onnxruntime>=1.24.4",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "telethon>=1.43.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
