[project]
name = "familybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.191.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.8",
    "loguru>=0.7.3",
    "onnx-asr>=0.11.0",
    "onnxruntime>=1.24.4",
    "pydantic-settings>=2.13.1",
    "pymorphy3>=2.0.6",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.4.1",
    "sqladmin>=0.27.2",
    "sqlalchemy>=2.0.48",
    "telethon>=1.43.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
